--- a/templates/dashboard/donations.html
+++ b/templates/dashboard/donations.html
@@ -3,6 +3,9 @@
 <div class="donations-container">
     <div class="page-header">
         <h2>Donations History</h2>
+        <div class="button-container">
+            <a href="{{ url_for('accept_donations') }}" class="btn">Accept Donations</a>
+        </div>
     </div>
 
     <div class="table-responsive">
