--- a/templates/find_item.html
+++ b/templates/find_item.html
@@ -29,6 +29,7 @@
                     <thead>
                         <tr>
                             <th>Item ID</th>
+                            <th>Item Description</th>
                             <th>Description</th>
                             <th>Room Number</th>
                             <th>Shelf</th>
@@ -40,6 +41,7 @@
                         {% for line in posts %}
                         <tr>
                             <td>#{{ line.ItemID }}</td>
+                            <td>{{ line.iDescription or '-'}}</td>
                             <td>{{ line.pDescription or '-' }}</td>
                             <td>{{ line.roomNum or '-' }}</td>
                             <td>{{ line.shelf or '-' }}</td>
